# sdl3_glad_lua

./: CMakeLists.txt  README.md  build.bat  cube3d.lua  main.lua  run.bat
cube3d/: README.md
cube3d/src/: module_cglm.c  module_gl.c  module_sdl.c
docs/: doc_lua_enet.md  doc_lua_gl.md  doc_lua_sdl.md  gl.md  lua.md  lua_bugs.md  lua_cglm.md  network.md  opengl.md  sdl3.md
examples/: check_sdl_buffer01.c  check_sdl_buffer02.c  client.lua  script.lua  sdl3_cglm_test.lua  sdl3_cimgui.lua  sdl3_cimgui_lua.c  sdl3_gl_check.c  test.lua  triangle.lua  triangle02.lua  window.lua
examples/c/: check_sdl_buffer03.c  sdl3_check_gl_attribute.c  sdl3_cube3d.c  sdl3_font.c  sdl3_font02.c  triangle.c
examples/lua/: bit_test.lua  script.lua  sdl3_cglm_test.lua  sdl3_cglm_translate.lua  sdl3_cimgui.lua  sdl3_cimgui_enet_client.lua  sdl3_cimgui_enet_client01.lua  sdl3_cimgui_enet_server.lua  sdl3_cimgui_enet_server02.lua  sdl3_cimgui_test.lua  sdl3_cube3d.lua  sdl3_cube3d01.lua  sdl3_cube3d02.lua  sdl3_cube3d03.lua  sdl3_gl_attribute.lua  sdl3_imgui_simple.lua  sdl3_triangle_imgui.lua  sdl_gl_font.lua  sdl_gl_font01.lua  sdl_gl_font02.lua  sdl_gl_font03.lua  sdl_gl_font04.lua  sdl_gl_font05.lua  sdl_gl_font06.lua  sdl_gl_font07.lua  sdl_gl_font08.lua  sdl_gl_font10.lua  sdl_gl_image.lua  sdl_gl_image01.lua  sdl_gl_image02.lua  sdl_gl_image03.lua  sdl_gl_image04.lua  sdl_gl_image05.lua  sdl_gl_image06.lua  sdl_gl_image07.lua  sdl_gl_image08.lua  sdl_gl_image09.lua  server.lua  test.lua  triangle.lua  (+2 more)
include/: module_enet.h  module_gl.h  module_imgui.h  module_sdl.h  module_stb.h  module_test.h
samples/cube3d/include/: module_cglm.h  module_lua.h
samples/cube3d/src/: main.c  module_gl.c
samples/font2d/: README.md  sdl3_font.lua
samples/font2d/include/: module_cglm.h  module_gl.h  module_stb.h
samples/font2d/src/: main.c  module_cglm.c  module_gl.c  module_lua.c  module_sdl.c  module_stb.c
src/: client.c  main.c  module_cglm.c  module_cimgui.c  module_enet.c  module_gl.c  module_imgui.c  module_sdl.c  module_stb.c  module_test.c  server.c  triangle.c
